Css additions to fix collapsed items

--- a/WebApp/Resources/Pages/ContactDetail.css
+++ b/WebApp/Resources/Pages/ContactDetail.css
@@ -124,6 +124,14 @@
     margin-bottom: 20px;
 }
 
+div[data-toggle="collapse"] .ui-icon { 
+    float: left;
+}
+
+.collapsedCustomCategory {
+    padding: 15px !important;
+}
+
 #taskTab {
     display:none;
 }
